syntax = "proto3";

package proto;

option go_package = "notification-service/proto"; // Fix this!

service NotificationService {
    rpc SendNotification(SendNotificationRequest) returns (SendNotificationResponse);
}

message SendNotificationRequest {
    string userId = 1;
    string message = 2;
}

message SendNotificationResponse {
    bool success = 1;
}
